Fixed issues with image stretching

--- a/src/Home.css
+++ b/src/Home.css
@@ -98,6 +98,7 @@
     height: 100%;
     width: 60%;
     transform: translate(-6.5%, 0%);
+    object-fit: cover;
 }
 
 /* Virtual Hours Information*/
@@ -136,6 +137,7 @@
     height: 50vh;
     overflow: hidden;
     margin-bottom: 3%;
+    object-fit: cover;
 }
 
 .travelBannerText {
@@ -196,6 +198,10 @@
     background-color: rgb(0, 95, 105);
     padding-top: 30px;
     border-radius: 10px 0 0 10px;
+}
+
+#videoIcon {
+    font-size: 50px;
 }
 
 #videoAppointmentInfo {
@@ -365,7 +371,7 @@ Media quieries for small devices
     }
 
     #videoIcon {
-        font-size: 2.5em;
+        font-size: 50px;
     }
 
     /* Table with the dates and time info */
@@ -395,11 +401,11 @@ Media quieries for tablets/medium devices
 
     /***** Virtual Hours Form Section ******/
     #videoIconSection {
-        padding-right: 15px;
+        padding: 0px 12px 15px 15px;
     }
 
     #videoIcon {
-        font-size: 3em;
+        font-size: 80px;
     }
 
     .videoAppointmentSpan{
@@ -434,12 +440,12 @@ Media quieries for computers/larger displays
 }
 
 #videoIconSection {
-    padding: 20px 0 0 45px;
+    padding: 20px 10px 0 45px;
 }
 
 /* video icon in vitual hours form section*/
 #videoIcon {
-    font-size: 4.5em;
+    font-size: 90px;
 }
 
 /* ===============================
